# redis-clone-with-py

./: .gitignore  README.md  client.py  main.py  pyproject.toml
redis/: app.py  exceptions.py  resp.py  settings.py
redis/resp/: resp_mapper.py  resp_types.py  serializer.py  simple_types.py  validator.py
src/: main.py  settings.py
src/tests/: client.py  conftest.py  test_send_commands.py
tests/: conftest.py  test_send_commands.py
