[tool.poetry]
name = "redis-clone"
version = "0.1.0"
description = ""
authors = ["LukaszSzumiec <lukasz.d.szumiec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
redis = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
